# astro

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  Makefile  README.es.md  README.md  docker-compose.yml
.github/workflows/: docs.yml  e2e.yml  frontends.yml  kernel.yml  paper.yml  python.yml  services.yml
apps/: README.md
apps/export-mfe/: README.md  federation.config.js  package.json
apps/shared-ui/: README.md  package.json
apps/shell-app/: README.md  angular.json  federation.config.js  package-lock.json  package.json
apps/simulation-mfe/: README.md  angular.json  federation.config.js  package-lock.json  package.json
cli/: README.md
cli/src/: main.py
docs/: architecture.md  physics.md  reproducibility.md
docs-site/: Makefile  requirements.txt
docs-site/source/: conf.py  getting_started.rst  index.rst
docs/decisions/: ADR-0001-stack-selection.md  ADR-0002-no-api-gateway.md  (+3 more)
gaia/: README.md  known_clusters.yaml
kernel/: Makefile  README.md
paper/: Makefile  README.md  paper.bib  paper.md
python/: README.md  pyproject.toml
python/astro_nbody/: __init__.py  _kernel.py  cli.py  gaia_import.py  report_plots.py  scenarios.py  simulation.py
python/notebooks/: 01_quickstart.ipynb
python/tests/: test_smoke.py
scenarios/: README.md  aarseth_standard.yaml  gaia_hyades.yaml  gaia_m67.yaml  gaia_pleiades.yaml  henon_heiles.yaml  pleiades.yaml  solar_system.yaml  three_body_figure8.yaml  three_body_pythagorean.yaml
scripts/: build-all.sh  dev-setup.sh  dev.sh  reproduce-run.sh  test-all.sh
services/: pom.xml
(+104 files in other folders)
